--- a/biblio.bib
+++ b/biblio.bib
@@ -198,3 +198,153 @@
   year={2004},
   publisher={MIT press}
 }
+@article{Vapnik_1963,
+  title={Generalized portrait method for pattern recognition},
+  author={Vapnik, V and Lerner, AJ},
+  journal={Automation and Remote Control},
+  volume={24},
+  number={6},
+  pages={774--780},
+  year={1963}
+}
+@inproceedings{Boser_1992,
+  title={A training algorithm for optimal margin classifiers},
+  author={Boser, Bernhard E and Guyon, Isabelle M and Vapnik, Vladimir N},
+  booktitle={Proceedings of the fifth annual workshop on Computational learning theory},
+  pages={144--152},
+  year={1992},
+  organization={ACM}
+}
+@article{Cortes_1995,
+  title={Support-vector networks},
+  author={Cortes, Corinna and Vapnik, Vladimir},
+  journal={Machine learning},
+  volume={20},
+  number={3},
+  pages={273--297},
+  year={1995},
+  publisher={Springer}
+}
+@book{Steinwart_2008,
+  title={Support vector machines},
+  author={Steinwart, Ingo and Christmann, Andreas},
+  year={2008},
+  publisher={Springer}
+}
+@article{Burges_1998,
+  title={A tutorial on support vector machines for pattern recognition},
+  author={Burges, Christopher JC},
+  journal={Data mining and knowledge discovery},
+  volume={2},
+  number={2},
+  pages={121--167},
+  year={1998},
+  publisher={Springer}
+}
+@techreport{Haussler_1999,
+  title={Convolution kernels on discrete structures},
+  author={Haussler, David},
+  year={1999},
+  institution={Technical report, Department of Computer Science, University of California at Santa Cruz}
+}
+@incollection{Gartner_2003,
+  title={On graph kernels: Hardness results and efficient alternatives},
+  author={G{\"a}rtner, Thomas and Flach, Peter and Wrobel, Stefan},
+  booktitle={Learning Theory and Kernel Machines},
+  pages={129--143},
+  year={2003},
+  publisher={Springer}
+}
+@article{Vishwanathan_2010,
+  title={Graph kernels},
+  author={Vishwanathan, S Vichy N and Schraudolph, Nicol N and Kondor, Risi and Borgwardt, Karsten M},
+  journal={The Journal of Machine Learning Research},
+  volume={11},
+  pages={1201--1242},
+  year={2010},
+  publisher={JMLR. org}
+}
+@inproceedings{Mahe_2004,
+  title={Extensions of marginalized graph kernels},
+  author={Mah{\'e}, Pierre and Ueda, Nobuhisa and Akutsu, Tatsuya and Perret, Jean-Luc and Vert, Jean-Philippe},
+  booktitle={Proceedings of the twenty-first international conference on Machine learning},
+  pages={70},
+  year={2004},
+  organization={ACM}
+}
+@article{Borgwardt_2007,
+  title={An efficient sampling scheme for comparison of large graphs},
+  author={Borgwardt, Karsten M and Petri, Tobias and Vishwanathan, SVN and Kriegel, Hans-Peter},
+  journal={Mining and Learning with Graphs, MLG},
+  pages={1--3},
+  year={2007},
+  publisher={Citeseer}
+}
+@article{Ralaivola_2005,
+  title={Graph kernels for chemical informatics},
+  author={Ralaivola, Liva and Swamidass, Sanjay J and Saigo, Hiroto and Baldi, Pierre},
+  journal={Neural Networks},
+  volume={18},
+  number={8},
+  pages={1093--1110},
+  year={2005},
+  publisher={Elsevier}
+}
+@inproceedings{Borgwardt_2005,
+  title={Shortest-path kernels on graphs},
+  author={Borgwardt, Karsten M and Kriegel, H-P},
+  booktitle={Data Mining, Fifth IEEE International Conference on},
+  pages={8--pp},
+  year={2005},
+  organization={IEEE}
+}
+@inproceedings{Horvath_2004,
+  title={Cyclic pattern kernels for predictive graph mining},
+  author={Horv{\'a}th, Tam{\'a}s and G{\"a}rtner, Thomas and Wrobel, Stefan},
+  booktitle={Proceedings of the tenth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={158--167},
+  year={2004},
+  organization={ACM}
+}
+@inproceedings{Costa_2010,
+  title={Fast neighborhood subgraph pairwise distance kernel},
+  author={Costa, Fabrizio and De Grave, Kurt},
+  booktitle={Proceedings of the 26th International Conference on Machine Learning},
+  pages={255--262},
+  year={2010}
+}
+@inproceedings{Ramon_2003,
+  title={Expressivity versus efficiency of graph kernels},
+  author={Ramon, Jan and G{\"a}rtner, Thomas},
+  booktitle={First International Workshop on Mining Graphs, Trees and Sequences},
+  pages={65--74},
+  year={2003},
+  organization={Citeseer}
+}
+@article{Mahe_2009,
+  title={Graph kernels based on tree patterns for molecules},
+  author={Mah{\'e}, Pierre and Vert, Jean-Philippe},
+  journal={Machine learning},
+  volume={75},
+  number={1},
+  pages={3--35},
+  year={2009},
+  publisher={Springer}
+}
+@article{Shervashidze_2011,
+  title={Weisfeiler-lehman graph kernels},
+  author={Shervashidze, Nino and Schweitzer, Pascal and Van Leeuwen, Erik Jan and Mehlhorn, Kurt and Borgwardt, Karsten M},
+  journal={The Journal of Machine Learning Research},
+  volume={12},
+  pages={2539--2561},
+  year={2011},
+  publisher={JMLR. org}
+}
+@inproceedings{Bai_2014,
+  title={A Hypergraph Kernel from Isomorphism Tests},
+  author={Bai, Lu and Ren, Peng and Hancock, Edwin R},
+  booktitle={Pattern Recognition (ICPR), 2014 22nd International Conference on},
+  pages={3880--3885},
+  year={2014},
+  organization={IEEE}
+}
