--- a/chapter1.tex
+++ b/chapter1.tex
@@ -156,9 +156,9 @@ Z_\2(G) = \sum_{(v,v^\prime)\in E}d(v)d(v^\prime)
 قبل از مرور گراف کرنل‌ها، توابع کرنل در یادگیری ماشین را مختصراً توضیح می‌دهیم. برای شرح جامع این روش‌ها به کتاب «یادگیری به وسیله کرنل‌ها»\جستار{Scholkopf_2002} مراجعه شود.
 
 \subsection{کرنل‌ها در یادگیری ماشین}
-بطور ساده، کرنل (مثبت معین) تابعی است که شباهت دو شیء را می‌سنجد. در این بخش ابتدا به معرفی کرنل می‌پردازیم و سپس یک مثال از کاربرد تابع کرنل را در قالب رده‌بندی دودویی\پانوشت{\متن‌لاتین{binary classification}} خواهیم دید.
+بطور ساده، کرنل (مثبت معین) تابعی است که شباهت دو شیء را می‌سنجد. در این بخش ابتدا به معرفی کرنل می‌پردازیم و سپس یک مثال از کاربرد تابع کرنل را در قالب دسته‌بندی دودویی\پانوشت{\متن‌لاتین{binary classification}} خواهیم دید.
 
-\subsubsection{کرنل‌های مثبت معین}
+\subsubsection{کرنل‌های مثبت معین}\label{sec:positive-semidefinite-kernels}
 در زیر تعریف کرنل‌های نیمه معین مثبت که از کتاب \جستار{Scholkopf_2004} آورده شده را می‌آوریم.
 \begin{definition}[کرنل‌ نیمه معین مثبت]
 اگر $\mX$ یک مجموعه ناتهی باشد، تابع $k: \mX \times \mX \mapsto \R$ یک تابع کرنل نیمه معین مثبت است اگر و تنها اگر متقارن باشد، یعنی برای هر $x,x^\prime \in \mX$ داشته باشیم
@@ -238,25 +238,99 @@ $k_1k_2(x,x^\prime) = k_1(x,x^\prime)k_2(x,x^\prime)$ تعریف می‌شود،
 
 کرنل‌ها علاوه بر اینکه امکان محاسبه ضرب داخلی در فضای با بعد بالا را فراهم می‌آورند، این قدرت را دارند که از داده‌های غیربرداری هم استفاده کنند. اگر برای هر شیء دلخواه، تابع متقارنی به عنوان مقیاس شباهت آن اشیاء تعریف کنیم، و اثبات کنیم که این تابع، نیمه معین مثبت است آنگاه بطور خودکار نمایشِ برداریِ داده در فضای ویژگی را در درست داریم و از آن برای محاسبه ضرب‌داخلی استفاده می‌کنیم.
 
-رابطه بین کرنل‌ها و اندازه‌گیری شباهت جالب توجه است: در بین محققان رشته یادگیری ماشین، ضرب‌داخلی به عنوان معیاری از شباهت مورد قبول واقع شده‌است. ولی در نگاه اول این رابطه واضح نیست. در واقع مفهوم شباهت بیشتر با فاصله عجین است. اگر نوعی از فاصله (مثلاً فاصله اقلیدسی) بین دو شیء کم باشد، آنگاه این دو شیء (طبق آن فاصله) شبیه هم در نظر گرفته می‌شوند؛ یعنی مقدار شباهت آن‌ها عددی بزرگ است. گاهی این دو مفهوم همزمان در یک تابع بروز می‌یابند. مثلاً مقدار کرنل RBF (فرمول \ارجا{eq:gaussian-kernel}) معکوسی از فاصله اقلیدسی است و همزمان به دلیل کرنل بودن، حاصل یک ضرب‌داخلی است. در حالت کلی، می‌توان نشان داد که برای هر کرنل $k$ روی هر $\mX$ رابطه
+رابطه بین کرنل‌ها و اندازه‌گیری شباهت جالب توجه است: در بین محققان رشته یادگیری ماشین، ضرب‌داخلی به عنوان معیاری از شباهت در نظر گرفته می‌شود. برای روشن شدن موضوع ابتدا رابطه فاصله و شباهت را در نظر بگیرید. اگر نوعی از فاصله (مثلاً فاصله اقلیدسی) بین دو شیء کم باشد، آنگاه این دو شیء طبق آن فاصله شبیه هم در نظر گرفته می‌شوند. می‌توان نشان داد که برای هر کرنل $k$ روی هر $\mX$ رابطه
 \begin{equation*}
 k(x,x^\prime) = \dfrac{\|\phi(x)\|^2 + \|\phi(x^\prime)\|^2 - \|\phi(x) - \phi(x^\prime)\|^2}{2}
 \end{equation*}
 که در آن $\|z\| = \langle{z,z}\rangle$، برقرار است. همانطور که در فصل یک از \جستار{Scholkopf_2004} توضیح داده شده‌است، $k(x,x^\prime)$ مقدار شباهت بین $x$ و $x^\prime$ را در قالب عکس مجذور فاصله بین $\phi(x)$ و $\phi(x^\prime)$ در فضای ویژگی، تا جمله 
 $\|\phi(x)\|^2$ و
 $\|\phi(x^\prime)\|^2$
- اندازه می‌گیرد. اگر تمام نقاط طول یکسانی در فضای ویژگی داشته باشند (
-برای هر $x \in \mX$ مقدار $\|\phi(x)\|^2$ عددی ثابت باشد
-)، آنگاه کرنل یک تابع کاهشی از فاصله در فضای ویژگی است.
+ اندازه می‌گیرد. اگر در این فضا تمام نقاط، طول یکسانی داشته باشند (برای هر $x \in \mX$ مقدار $\|\phi(x)\|^2$ عددی ثابت باشد)، آنگاه کرنل یک تابع کاهشی از فاصله در فضای ویژگی است.
 
-برای جمع‌بندی این بخش، از آنجا که کرنل‌ها حاصل ضرب‌داخلی هستند، می‌توان به آنها بعنوان مقیاس شباهت نگاه کرد. و از آنجا که برای هر کرنل، یک تابع نگاشت ویژگی وجود دارد، می‌توان به آنها بعنوان نمایش گراف نگاه کرد. برای بعضی کرنل‌ها، تعریف دقیق نحوه نمایش گراف امکان‌پذیر نیست. اما براساس آنچه توضیح داده شد، محاسبه ضرب داخلی آن امکان‌پذیر است. علاوه بر این، یک امتیاز کرنل این است که برای انواع داده قابل تعریف هستند.
+به عنوان جمع‌بندی این بخش باید گفت از آنجا که کرنل‌ها حاصل ضرب‌داخلی هستند، می‌توان به آنها بعنوان مقیاس شباهت نگاه کرد. و از آنجا که برای هر کرنل، یک تابع نگاشت ویژگی وجود دارد، می‌توان آنها را ابزاری برای نمایش گراف در نظر گرفت. برای بعضی کرنل‌ها، تعریف دقیق نحوه نمایش گراف امکان‌پذیر نیست. اما براساس آنچه توضیح داده شد، محاسبه ضرب داخلی در فضای ویژگی امکان‌پذیر است. علاوه بر این، یک امتیاز کرنل این است که برای انواع داده قابل تعریف هستند.
 
 \subsubsection{دسته‌بندی دودویی با استفاده از ماشین‌های بردار پشتیبان}
-دسته‌بندی دودویی یکی از مسائل بنیادی در یادگیری ماشین است. به صورت غیر رسمی مسئله به این صورت است که: دو دسته کلاس داده شده‌اند، 
+دسته‌بندی دودویی یکی از مسائل بنیادی در یادگیری ماشین است و به این صورت مطرح می‌شود که با در اختیار داشتن دو دسته شیء، رابطه‌ای تعریف کنید که مشخص کند یک شیء‌ جدید به کدام دسته متعلق است. تعریف فرمال مسئله به این صورت است. یک مجموعه از دوتایی ها به شکل
+\begin{equation*}
+(x_1,y_1),...,(x_N,y_N) \in \mX \times \mY
+\end{equation*}
+در اختیار داریم که $\mX$ مجموعه‌ای از اشیاء (نمونه‌ها یا داده نقاط) و $\mY = \left\lbrace-1,+1 \right\rbrace$ است. $\mX$ می‌تواند مجموعه‌ای از هر چیز باشد: مجموعه موجودات زنده، شرایط آب و هوایی، ساختارهای پروتئینی و یا بردارهای به طول $p$. برای یک $x_i \in \mX$، $y_i$ مشخص کننده دسته‌ای است که $x_i$ به آن تعلق دارد و به آنها برچسب دسته یا فقط برچسب گفته می‌شود. هدف آن است که تابع $f: \mX \mapsto \mY$ را طوری تعریف کنیم که بتواند به نمونه‌های دیده نشده، برچسب درستی تخصیص دهد.
 
-\subsection{مبانی گراف کرنل‌}
+الگوریتم \خمیده{ماشین بردار پشتیبان}\پانوشت{\متن‌لاتین{Support Vector Machine}} یا به اختصار SVM برای یافتن تابع $f$، اولین بار در دهه ۱۹۶۰ توسط وپنیک\پانوشت{Vapnik} و لرنر\پانوشت{Lerner} طراحی شد\جستار{Vapnik_1963} و توسط بوزر\پانوشت{Boser} و دیگران\جستار{Boser_1992}، کورتز\پانوشت{Cortes} و وپنیک\جستار{Cortes_1995} به شکل امروزی آن فرمول‌بندی گشت. این الگوریتم به دلیل داشتن پایه قوی ریاضی و استفاده از خوش رفتارترین بهینه سازی‌ها یعنی بهینه‌سازی‌ محدب\پانوشت{\متن‌لاتین{Convex Optimization}} که مورد توجه قرار گرفت. در ادامه، مبانی این الگوریتم را مرور خواهیم کرد. برای شرح مفصل‌تر به \جستار{Steinwart_2008} مراجعه شود.
 
+مسئله دسته‌بندی دودوییِ SVM، روی داده ورودی به شکل 
+$(\mx_1,y_1),...,(\mx_N,y_N) \in \mH\times\left\lbrace -1,+1 \right\rbrace$
+ فرمول‌بندی می‌شود که در آن $\mH$ فضای هیلبرت بازتولید کرنل است. تفاوت این تعریف با تعریف قبلی در آن است که نمونه‌های $\mx_1,...,\mx_N$ برخلاف قبل نه یک مجموعه دلخواه بلکه متعلق به یک RKHS هستند. بدون از دست رفتن کلیت مسئله می‌توانیم هر $\mx_i$ را نمایش برداری شیء $x_i$ در نظر بگیریم. حتی می‌توان $\mX$ را یک RKHS در نظر گرفت، چون تنها شرط روی $\mX$ تهی نبودن است. هر عنصر از $\mx_i$ به عنوان ویژگی\پانوشت{feature} شناخته می‌شود. هدف SVM یافتن اَبَرصفحه‌ای است که نمونه‌های دو دسته را با بیشترین حاشیه\پانوشت{margin} از یکدیگر جدا کند، یعنی فاصله ابرصفحه از نقاط در بیشترین حالت ممکن باشد (شکل \ارجا{fig:svm-margin} را ببینید). اینکار معادل حل مسئله بهینه‌سازی زیر است.
+\begin{equation}\label{eq:svm-normal-form}
+\begin{aligned}
+& \underset{w \in \mH, b \in \R}{\text{minimize}} & & \dfrac{1}{2} \|w\|^2 \\
+& \text{\lr{subject to}} & & y_i(\langle \mx_i,w \rangle + b) \geq 1 \quad\text{\lr{for all}}\quad i = 1, \ldots ,N.
+\end{aligned}
+\end{equation}
+مسئله \ارجا{eq:svm-normal-form} معمولاً در فرم دوگانی لاگرانژ حل می‌شود:
+\begin{equation}\label{eq:svm-dual-form}
+\begin{aligned}
+& \underset{\alpha \in \R^N}{\text{minimize}} & & W(\alpha)=\sum_{i=1}^{N}\alpha_i - \dfrac{1}{2} \sum_{i,j=1}{N} \alpha_i \alpha_j y_i y_j \langle \mx_i,\mx_j \rangle \\
+& \text{\lr{subject to}} & & \alpha_i \geq 0 \quad\text{\lr{for all}}\quad i = 1, \ldots ,N, \\
+& \text{\lr{and}} & & \sum_{i=1}^{N} \alpha_i y_i = 0.
+\end{aligned}
+\end{equation}
+اگر داده نقاط مثبت و منفی توسط یک ابرصفحه، جدایی‌پذیر یا به اصطلاح \خمیده{خطی جدایی‌پذیر} باشند، حاصل حل مسئله \ارجا{eq:svm-normal-form}، ابرصفحه‌ی بهینه است (مثل شکل \ارجا{fig:svm-margin}). ولی داده نقاط همیشه خطی جدایی‌پذیر نیستند. نوعی از SVM ها با نام SVM‌ های \خمیده{حاشیه-ملایم}\پانوشت{\متن‌لاتین{soft-margin}} وجود دارند که می‌توانند روی داده نقاط تقریبا خطی جدایی‌پذیر (شکل \ارجا{fig:almost-linearly-separable}) کار کنند\جستار{Cortes_1995}. به این نوع از SVM ها، C-SVM می‌گویند. فرم اولیه و دوگانی C-SVM ها در ادامه آمده است.
+\begin{equation}\label{eq:c-svm-normal-form}
+\begin{aligned}
+& \underset{w \in \mH, b \in \R}{\text{minimize}} & & \dfrac{1}{2} \|w\|^2 + \dfrac{C}{N} \sum_{i=1}^{N} \xi_i \\
+& \text{\lr{subject to}} & & y_i(\langle \mx_i,w \rangle + b) \geq 1 - \xi_i \quad\text{\lr{for all}}\quad i = 1, \ldots ,N, \\
+& \text{\lr{and}} & & \xi_i \geq 0\quad\text{\lr{for all}}\quad i = 1, \ldots ,N.
+\end{aligned}
+\end{equation}
+به $\xi_i$ ها متغیرهای اسلک\پانوشت{slack} گفته می‌شود. این متغیرها میزان نقض قید $y_i(\langle \mx_i,w \rangle + b) \geq 1$ توسط داده نقطه $i$ را اندازه می‌گیرند. در واقع این متغیرها اجازه می‌دهند داده نقاط تا اندازه‌ای غلط دسته‌بندی شوند. پارامتر $C$ برقرار کننده تعادل بین رساندن حاشیه به حداکثر و رساندن تعداد نقاطی که در حاشیه و یا در دسته غلط قرار گرفته‌اند، به حداقل است.
+\begin{equation}\label{eq:c-svm-dual-form}
+\begin{aligned}
+& \underset{\alpha \in \R^N}{\text{minimize}} & & W(\alpha)=\sum_{i=1}^{N}\alpha_i - \dfrac{1}{2} \sum_{i,j=1}{N} \alpha_i \alpha_j y_i y_j \langle \mx_i,\mx_j \rangle \\
+& \text{\lr{subject to}} & & 0 \leq \alpha_i \leq \dfrac{C}{N} \quad\text{\lr{for all}}\quad i = 1, \ldots ,N, \\
+& \text{\lr{and}} & & \sum_{i=1}^{N} \alpha_i y_i = 0.
+\end{aligned}
+\end{equation}
+C-SVM ها مسئله پیدا کردن ابرصفحه بهینه برای جداسازی دو دسته را طوری حل می‌کنند که در آن به تعداد کمی از داده نقاط اجازه داده می‌شود که غلط دسته‌بندی شوند. ولی برخی از مسائل هستند که نمی‌توان با تعداد کمی اشتباه، داده ها را با یک ابرصفحه از هم جدا کرد، هر ابرصفحه‌ای که انتخاب کنیم تعداد زیادی از نقاط اشتباه دسته‌بندی می‌شوند (شکل \ارجا{fig:non-linearly-separable-data} را ببینید). در این حالت شاید بتوان نمایش داده نقاط را طوری بازتعریف کرد که خطی جدایی‌پذیر بشوند.
+همانطور که در شکل \ارجا{fig:non-linearly-separable-data}  نشان داده شده‌است، حتی در مواردی که داده‌ها به شدت غیر خطی هستند، می‌توان از الگوریتم دسته‌بندی خطی  SVM استفاده‌کرد و از قابلیت‌های آن بهره برد. تنها شرطی که دارد آن است که بتوانیم داده نقاط را در یک فضای دیگر طوری بازنشانی کنیم که خطی جدایی‌پذیر بشوند. اولین چیزی که به ذهن خطور می‌کند استفاده از فضاهای با بعد بالاتر RKHS است.
 
-\subsection{کرنل‌های مبتنی بر مسیر}
+ملاحظه می‌کنید که فرم دوگانی SVM تنها از ضرب‌داخلی نقاط $\mx_i,\ldots,\mx_N$ استفاده می‌کند (دستگاه‌های \ارجا{eq:svm-dual-form} و \ارجا{eq:c-svm-dual-form} را ببینید). نکته اینجاست که برای SVM مهم نیست که این ضرب‌داخلی در چه فضایی انجام گرفته است. فضای RKHS $\mH$ را می‌توان با هر RKHS $\mH^\prime$ تعویض کرد. اینجا جایی است که می‌توان از کرنل‌ها به خوبی استفاده کرد: با داشتن کرنل $k: \mX\times \mX \mapsto \R$، می‌توانیم هر $\langle \mx_i,\mx_j \rangle$ را با $k(x_i,x_j)$ جایگزین کنیم. با اینکار، قدرت کرنل‌ها برای نمایش نقاط در فضای با بعد بالاتر را به SVM اضافه می‌کنیم و شاید بتوانیم در آن فضا داده‌ها را به صورت خطی از هم جدا کنیم. بعلاوه از آنجایی که کرنل‌ها را می‌توان روی هر مجموعه‌ای از اشیاء تعریف کرد، پس در واقع SVM هم روی هر مجموعه‌ای از اشیاء قابل استفاده خواهد بود.
+
+اما اگر در SVM از یک تابع اندازه‌گیری شباهت استفاده کنیم که نوعی از ضرب‌داخلی نباشد (متقارن یا نیمه معین مثبت نباشد)، چه اتفاقی خواهد افتاد. پاسخ اینکه توابعی مثل کرنل sigmoid اینچنین هستند و قبلاً در SVM استفاده شده‌اند. ولی در این حالت تضمینی برای محدب بودن مسئله بهینه‌سازی وجود ندارد و ممکن است دستگاه \ارجا{eq:c-svm-dual-form} اصلاً جواب نداشته باشد\جستار{Burges_1998}.
+
+\subsection{مبانی گراف کرنل‌}\label{sec:graph-kernel-basics}
+گراف کرنل‌ها نمونه‌هایی از خانواده‌ی کرنل‌های \متن‌لاتین{R-convolution} هستند\جستار{Haussler_1999}. \متن‌لاتین{R-convolution} یک راه کلی برای تعریف کرنل روی اشیاء مرکب است که در آن، یک شیء، تجزیه شده و مقایسه‌ی شباهت روی اجزای اشیاء صورت می‌گیرد. بنابراین هر نوع تجزیه گراف، به تعریف یک گراف کرنل منجر خواهد شد.
+
+با داشتن یک رابطه تجزیه مثل R که هر گراف را به تمام دوتایی‌های زیرگراف و مابقی گراف تقسیم می‌کند.
+
+اگر رابطه تجزیه R را داشته باشیم که هر گراف را به تمام زیرگراف‌های ممکن تقسیم کند، کرنل R-convolution وابسته، تمام زیرگراف‌های دو گراف را با هم مقایسه می‌کند. ولی محاسبه این کرنل به اندازه حل مسئله یکریختی سخت خواهد بود\جستار{Gartner_2003}. بنابراین معمولاً کرنل را به مقایسه زیرگراف‌هایی محدود می‌کنند که در زمان خطی محاسبه پذیر باشد.
+
+ذکر این نکته ضروری است که در یادگیری ماشین عبارت \خمیده{گراف کرنل} معمولاً به کرنلی اطلاق می‌شود که ند‌های یک گراف بزرگ را با هم مقایسه می‌کند. در این پایان‌نامه، به این نوع کرنل‌ها، کرنل رأسی می‌گوییم و از واژه گراف کرنل برای اشاره به کرنلی استفاده می‌کنیم که گراف‌ها را با یکدیگر مقایسه می‌کند.
+
+گراف کرنل‌های تعریف شده در یادگیری ماشین را می‌توان به سه گروه تقسیم کرد: گراف کرنل‌های مبتنی بر گشت و مسیر، گراف کرنل‌های مبتنی بر زیرگراف‌های کوچک، و گراف کرنل‌های مبتنی بر الگوی زیردرختی. در ادامه به مرور این سه گروه می‌پردازیم.
+
+\subsection{کرنل‌های مبتنی بر گشت و مسیر}
+گراف کرنل‌های مبتنی بر گشت و مسیر به ترتیب تعداد گشت‌ها و مسیرهای تصادفی یکسان بین دو گراف را می‌شمارند. الگوریتم استاندارد کرنل گشت تصادفی\جستار{Gartner_2003} روی دو گراف، در $O(n^6)$  قابل محاسبه است. ولی با تبدیل مسئله به حاصلضرب کرونکر\پانوشت{\متن‌لاتین{Kronecker prodduct}} می‌توان زمان محاسبه را به $O(n^3)$ کاهش داد\جستار{Vishwanathan_2010}. هرچند که این کاهش در زمان محاسبه قابل توجه است، اما پیچیدگی $O(n^3)$ هنوز بسیار بالاست. علاوه بر این، کرنل‌های مبتنی بر گشت دو مشکل دیگر هم دارند: \خمیده{رفت و برگشت}\پانوشت{tottering}\جستار{Mahe_2004} و \خمیده{هالتینگ}\پانوشت{halting}\جستار{Borgwardt_2007}.
+
+مشکل رفت و برگشت از این حقیقت سرچشمه می‌گیرد که طبق تعریف، یک گشت اجازه تکرار رئوس و یال‌ها را دارد. در نتیجه، یک یال مشترک در دو گراف، می‌تواند به تعداد نامتناهی روی مقدار کرنل تأثیرگذار باشد. برای حلقه‌ها و مسیرهای مشترک بین دو گراف هم این وضعیت وجود دارد. بنابراین مقدار کرنل برای دو گراف که شباهت ساختاری به هم ندارند می‌تواند بی‌جهت بزرگ شود.
+
+و اما مشکل هالتینگ. همانطور که دیدیم کرنل گشت تصادفی، تعداد \خمیده{تمام} گشت‌های مشترک بین دو گراف را می‌شمارد. از طرفی، تعداد گشت‌های حداقل به طول یک در یک گراف، ناشماراست. بنابراین معمولاً یک فاکتور کاهنده $\lambda$ روی طول گشت در نظر می‌گیرند که وزن گشت‌های بلند را کم می‌کند. هرچند که با اینکار مقایسه دو گراف با در نظر گرفتن تمام گشت‌ها ممکن می‌شود ولی گشت‌های کوچک بر مقدار کرنل چیره می‌شوند. به این مشکل، \خمیده{هالتینگ} می‌گویند.
+
+کرنل کوتاهترین مسیر، طول کوتاهترین مسیر بین هر دو رأس مشترک بین دو گراف (که با برچسب مشخص می‌شوند) را مقایسه می‌کند\جستار{Borgwardt_2005}. پیچیدگی محاسباتی این کرنل برابر $O(n^4)$ است. به وسیله این کرنل، گراف کرنل‌هایی کارا مختص مولکول‌های کوچک با میانگین درجه بین دو تا سه تعریف شده‌اند که مسیرهای برچسب‌دار به طول $p$ را می‌شمارند\جستار{Ralaivola_2005}. این مسیر‌ها توسط الگوریتم جستجوی عمق-اول برای هر رأس محاسبه می‌شوند.
+
 \subsection{کرنل‌های مبتنی بر زیرگراف‌های کوچک}
-\subsection{کرنل‌های مبتنی بر زیردرخت‌ها}
+این گروه، شامل کرنل‌های مبتنی بر شمارش زیرگراف‌های کوچک یا به اصطلاح \خمیده{گرافلت‌ها}\پانوشت{graphlets} است. در این روش، هر گراف به شکل برداری از تعدادِ زیرگراف‌های سه تا پنج رأسی نمایش داده می‌شود. محاسبه مقدار کرنل برای دو گراف به این صورت انجام می‌شود که ابتدا بردار گرافلت برای آن دو محاسبه می‌شود، سپس با ضرب داخلی این دو بردار، میزان شباهت دو گراف بدست می‌آید. بهترین الگوریتم برای محاسبه بردار گرافلت، دارای پیچیدگی $O(nd^{k-1})$ است که در آن $k = \lbrace{3,4,5}\rbrace$ اندازه گرافلت و $d$ بزرگترین درجه گراف است. در فصل \ارجا{chap:gaussian-graphlet-kernel} راجع به این کرنل‌ها به تفصیل سخن خواهیم گفت و مشکلات آن‌ را بررسی خواهیم کرد.
+کرنل‌های الگوهای دوری\پانوشت{\متن‌لاتین{cyclic pattern kernels}}\جستار{Horvath_2004}، تعداد حلقه‌های مشترک بین دو گراف را می‌شمارند. محاسبه این کرنل به طور کلی مسئله‌ای \متن‌لاتین{NP-hard} است و تنها برای برخی گراف‌هاست که می‌توان مقدار کرنل را به صورت بهینه محاسبه کرد. کرنل دیگری که در این گروه قرار می‌گیرد، بر اساس تجزیه گراف به زیرگراف‌های همسایگی به شعاع $r$ و به فاصله $d$ تعریف می‌شود\جستار{Costa_2010}. میزان شباهت دو گراف برابر تعداد زیرگراف‌های یکریخت بین آن‌ها خواهد بود. این کرنل برای گراف‌های کوچک و همچنین $r$ و $d$ بسیار کوچک پیچیدگی تقریباً $O(n)$ خواهد داشت ولی با افزایش $d$ و $r$ مسئله به تست یکریختی دو گراف نزدیک خواهد شد.
+
+\subsection{کرنل‌های مبتنی بر الگوهای زیردرختی}
+اولین کرنل از این گروه در سال ۲۰۰۳ تعریف شد\جستار{Ramon_2003}. در این کرنل، برای محاسبه میزان شباهت دو گراف $G$ و $G^\prime$، برای هر جفت رأس $v \in G$ و $v^\prime \in G^\prime$، تمام زیرساختارهای یکریخت از دو درخت ریشه گرفته از $v$ و $v^\prime$ شمرده می‌شوند. محاسبه این کرنل کار دشواری است: برای مجموعه $N$ تایی از گراف‌ها، پیچیدگی محاسباتی برابر $O(N^2n^2h4^d)$ خواهد بود که $n$ تعداد رئوس گراف، $h$ ارتفاع بزرگترین زیردرخت در نظر گرفته شده و $d$ حداکثر درجه در گراف‌های این مجموعه است. کرنل‌های دیگری بر مبنای این کرنل در کاربردهایی نظیر شیمی محاسباتی\جستار{Mahe_2009} و پردازش تصویر\جستار{Bach_2008} تعریف شده‌اند که برای گراف‌های کوچک مناسب هستند ولی بازهم رشد پیچیدگی آن‌ها تابعی نمایی از اندازه گراف است.
+
+\subsection{گراف‌کرنل‌های ویسفلر-لیمن}
+ خانواده کرنل‌های ویسفلر-لیمن\پانوشت{\متن‌لاتین{Weisfeiler-Lehman}}\جستار{Shervashidze_2011} بر اساس تست همریختی با همین نام پایه‌ریزی شده‌اند. ایده اصلی در این کرنل‌ها برچسب‌گذاری دوباره رئوس است. الگوریتم به صورت مرحله‌ای اجرا می‌شود. تعداد مراحل با پارامتر ارتفاع $h$ کنترل می‌گردد. در هر مرحله از اجرای الگوریتم، برای هر رأس $v$ از گراف $G$، زیرگرافی از $G$ در نظر گرفته می‌شود که شعاع آن از رأس $v$ حداکثر $h$ باشد. سپس به برچسب $v$، مجموعه مرتبی از برچسب‌های رئوس این زیرگراف افزوده می‌شود و این برچسب‌ها در قالب یک برچسب جدید فشرده می‌شوند. حال می‌توان از هر کرنل $k$ که روی گراف‌های برچسب‌دار تعریف شده باشد استفاده کرد و شباهت دو گراف دوباره برچسب‌دهی شده را اندازه گرفت. بر این اساس، سه کرنل ویسفلر-لیمن زیردرختی، یالی و کوچکترین مسیر تعریف شده‌اند\جستار{Shervashidze_2011}. پیچیدگی محاسبه ویسفلر-لیمن زیردرختی برای مجموعه $N$ گراف برابر  $O(Nhm+N^2hn)$ است که $h$ پارامتر ارتفاع و $n$ و $m$ به ترتیب تعداد رئوس و یال‌های بزرگترین گراف این مجموعه هستند. با این وجود این کرنل مانند کرنل گشت تصادفی، از مشکل رفت و برگشت رنج می‌برد\جستار{Bai_2014}. کرنل‌های ویسفلر-لیمن یالی و کوچکترین مسیر علاوه بر زمان اجرای زیاد، نیاز به حافظه زیادی دارند که استفاده از آن‌ها را برای مجموعه گراف‌های بزرگ غیر ممکن می‌کند (رجوع شود به بخش ۳.۳.۱ و ۳.۴.۱ \جستار{Shervashidze_2011}).
+ 
+\subsection{جمع‌بندی}
+در این بخش تئوری‌های مورد نیاز برای فصول آینده را مرور کردیم و مهمترین گراف کرنل‌ها در یادگیری ماشین را معرفی نمودیم. همانطور که در بخش‌های \ارجا{sec:graph_comparison} و \ارجا{sec:positive-semidefinite-kernels} دیدیم، هر کرنل نیمه معین مثبت روی گراف‌ها به شکل $k(G,G^\prime) = \lbrace{\phi(G),\phi(G^\prime)}\rbrace$ تعریف می‌شود که $\phi(G)$ نمایش ویژگی $G$ در فضای هیلبرت بازتولید کرنل است: انتخاب $k$ (بطور معادل، انتخاب $\phi$) پاسخی برای هر دو مسئله‌ی مقایسه و نمایش گراف است. همچنین، دیدیم که گراف کرنل‌ها به ما امکان می‌دهند طیف وسیعی از تکنیک‌های یادگیری ماشین را روی ساختارهای پیچیده در قالب گراف پیاده‌سازی کنیم.
+
+اما همانطور که در بخش \ارجا{sec:graph-kernel-basics} دیدیم، گراف کرنل‌های موجود دارای مشکلاتی هستند که مهمترین آن‌ها پیچیدگی زمانی بالاست. در مورد گراف کرنل ویسفلر-لیمن زیردرختی که زمان اجرای خوبی دارد، مشکل رفت و برگشت از دقت آن در مقایسه گراف‌ها می‌کاهد.
+
+در فصل بعد گرافلت کرنل‌ها را با دقت بیشتری بررسی می‌کنیم و سعی می‌کنیم با محاسبه بهینه تعداد گرافلت‌ها مشکل پیچیدگی این نوع از کرنل‌ها را حل کنیم، و سپس با محاسبه فاصله بین بردارهای گرافلت (متناظر با گراف‌های تحت بررسی) در فضای بالاتر، دقت این کرنل را افزایش دهیم.
