--- a/commands.tex
+++ b/commands.tex
@@ -105,9 +105,11 @@
 \newcommand{\mN}{\mathcal{N}}
 \newcommand{\mG}{\mathcal{G}}
 \newcommand{\mX}{\mathcal{X}}
+\newcommand{\mY}{\mathcal{Y}}
 \newcommand{\mH}{\mathcal{H}}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\mx}{\mathrm{x}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%
