--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,1 +1,4 @@
-\chapter{پیش‌بینی عملکرد پروتئین‌ها با استفاده از گراف کرنل گاوسی}
+\chapter{پیش‌بینی عملکرد پروتئین‌ها با استفاده از گرافلت کرنل گاوسی}
+\section{پروتئین}
+\section{نمایش گرافی پروتئین}
+
