Start of chapter 3

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,4 +1,5 @@
 \chapter{گرافلت کرنل گاوسی}
+در این فصل می‌خواهیم گرافلت کرنل گاوسی را معرفی کنیم. این کرنل بر مبنای شمارش تعداد گرافلت‌ها برای هر گراف
 \section{شمارش گرافلت‌ها}
 \section{گرافلت کرنل گاوسی}
 \section{عملکرد کرنل گاوسی}
