--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,4 +1,8 @@
 \chapter{پیش‌بینی عملکرد پروتئین‌ها با استفاده از گرافلت کرنل گاوسی}
-\section{پروتئین}
-\section{نمایش گرافی پروتئین}
+پروتئین‌ها بخش مهمی از فعالیت‌های زیستی را تشکیل می‌دهند. درک نحوه کار آن‌ها وابسته به یافتن عملکرد و وظیفه هر کدام در سامانه‌های زیستی است. روش‌های آزمایشگاهی برای تشخیص عملکرد پروتئین پر هزینه هستند بنابراین سعی می‌شود ابتدا با روش‌های محاسباتی، برای هر پروتئین عملکردی پیش‌بینی گردد و سپس در آزمایشگاه درستی این پیش‌بینی آزمون شود. روش‌های محاسباتی پیش‌بینی عملکرد بر اساس تخصیص عملکرد به پروتئین ناشناخته بر مبنای عملکردهای شناخته شده برای پروتئین‌های مشابه، عمل می‌کنند. در این فصل، پروتئین‌ها را به صورت گراف مدل کرده و سپس از گرافلت کرنل گاوسی به همراه SVM برای ساختن ماشین تشخیص عملکرد استفاده می‌کنیم.
 
+\section{ساختار پروتئین}\label{sec:protein-structure}
+پروتئین‌ها مواد آلی بزرگ و یکی از انواع درشت مولکول‌های زیستی هستند که از \خمیده{اسیدهای آمینه} ساخته شده‌اند. هر اسیدآمینه، از یک کربن نامتقارن به نام کربن $\alpha$ تشکیل یافته است که با چهار گروه مختلف کربوکسیل (\متن‌لاتین{COOH})، اتم هیدروژن، گروه آمینه (\متن‌لاتین{NH2}) و یک زنجیره جانبی ارتباط برقرار می‌کند (شکل \ارجا{fig:aminoacid}). تغییر در زنجیره جانبی، نوع متفاوتی از اسیدآمینه را بوجود می‌آورد. در طبیعت ۲۰ اسیدآمینه وجود دارد. با پیوند اسیدهای آمینه به صورت زنجیره‌‌ای بلند، یک \خمیده{پلی‌پپتید} بوجود می‌آید که در اصطلاح \خمیده{ساختار اول} پروتئین را تشکیل می‌دهد. به نظم‌های موضعی که پروتئین در حین تاشدگی\پانوشت{folding} به خود می‌گیرد، \خمیده{ساختار دوم} پروتئین می‌گویند. به شکل سه بعدی پروتئین بعد از تاشدگی، \خمیده{ساختار سوم} پروتئین گفته می‌شود. بعضی پروتئین‌ها از بیش از یک زنجیره پلی‌پتیدی بوجود می‌آیند. به نحوه قرار گرفتن این زنجیره‌ها در فضای سه‌بعدی، \خمیده{ساختار چهارم} پروتئین گفته می‌شود. شکل \ارجا{fig:protein} این مفاهیم را در قالب تصویر نشان می‌دهد.
+
+\section{مدل گرافی پروتئین}
+برای مدل کردن پروتئین به صورت گراف، معمولاً اسید‌های آمینه را به عنوان رئوس گراف در نظر می‌گیرند. بین هر دو رأس یال خواهد بود اگر اسیدهای آمینه متناظر حداکثر به فاصله تعریف شده $d$ از یکدیگر قرار گرفته باشند. به این فاصله، فاصله اتصال\پانوشت{\متن‌لاتین{contact distance}} می‌گوییم. برای اندازه‌گیری این فاصله، باید موقعیت هر اسیدآمینه در فضای سه بعدی را تعیین کرد. اما همانطور که در بخش \ارجا{sec:protein-structure} به آن اشاره شد، هر اسیدآمینه از چند اتم ساخته شده است. اینکه موقعیت اسیدآمینه توسط کدام اتم تعیین شود و فاصله اتصال چقدر باشد، موضوعی چالش برانگیز در تحقیقات بوده است.
