for backup reasons

--- a/biblio.bib
+++ b/biblio.bib
@@ -348,3 +348,170 @@
   year={2014},
   organization={IEEE}
 }
+
+
+
+
+@article{Pearson_1988,
+  doi = {10.1073/pnas.85.8.2444},
+  url = {http://dx.doi.org/10.1073/pnas.85.8.2444},
+  year = {1988},
+  month = {Apr},
+  publisher = {Proceedings of the National Academy of Sciences},
+  volume = {85},
+  number = {8},
+  pages = {2444-2448},
+  author = {W. R. Pearson and D. J. Lipman},
+  title = {{Improved tools for biological sequence comparison.}},
+  journal = {Proceedings of the National Academy of Sciences},
+}
+@article{Altschul_1997,
+  doi = {10.1093/nar/25.17.3389},
+  url = {http://dx.doi.org/10.1093/nar/25.17.3389},
+  year = {1997},
+  month = {Sep},
+  publisher = {Oxford University Press (OUP)},
+  volume = {25},
+  number = {17},
+  pages = {3389-3402},
+  author = {S. Altschul},
+  title = {{Gapped BLAST and PSI-BLAST: a new generation of protein database search programs}},
+  journal = {Nucleic Acids Research},
+}
+@article{Holm_1996,
+  doi = {10.1126/science.273.5275.595},
+  url = {http://dx.doi.org/10.1126/science.273.5275.595},
+  year = {1996},
+  month = {Aug},
+  publisher = {American Association for the Advancement of Science (AAAS)},
+  volume = {273},
+  number = {5275},
+  pages = {595-602},
+  author = {L. Holm and C. Sander},
+  title = {{Mapping the Protein Universe}},
+  journal = {Science},
+}
+@article{Shindyalov_1998,
+  doi = {10.1093/protein/11.9.739},
+  url = {http://dx.doi.org/10.1093/protein/11.9.739},
+  year = {1998},
+  month = {Sep},
+  publisher = {Oxford University Press (OUP)},
+  volume = {11},
+  number = {9},
+  pages = {739-747},
+  author = {I. N. Shindyalov and P. E. Bourne},
+  title = {{Protein structure alignment by incremental combinatorial extension (CE) of the optimal path}},
+  journal = {Protein Engineering Design and Selection},
+}
+@article{Reeck_1987,
+  doi = {10.1016/0092-8674(87)90322-9},
+  url = {http://dx.doi.org/10.1016/0092-8674(87)90322-9},
+  year = {1987},
+  month = {Aug},
+  publisher = {Elsevier BV},
+  volume = {50},
+  number = {5},
+  pages = {667},
+  author = {Gerald R. Reeck and Christoph de Ha\"en and David C. Teller and Russell F. Doolittle and Walter M. Fitch and Richard E. Dickerson and Pierre Chambon and Andrew D. McLachlan and Emanuel Margoliash and Thomas H. Jukes and Emile Zuckerkandl},
+  title = {{“Homology” in proteins and nucleic acids: A terminology muddle and a way out of it}},
+  journal = {Cell},
+}
+@article{Illergaard_2009,
+  title={Structure is three to ten times more conserved than sequence—a study of structural response in protein cores},
+  author={Illerg{\aa}rd, Kristoffer and Ardell, David H and Elofsson, Arne},
+  journal={Proteins: Structure, Function, and Bioinformatics},
+  volume={77},
+  number={3},
+  pages={499--508},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+@article{Przulj_2004,
+  doi = {10.1093/bioinformatics/bth436},
+  url = {http://dx.doi.org/10.1093/bioinformatics/bth436},
+  year = {2004},
+  month = {Dec},
+  publisher = {Oxford University Press (OUP)},
+  volume = {20},
+  number = {18},
+  pages = {3508-3515},
+  author = {N. Przulj and D. G. Corneil and I. Jurisica},
+  title = {{Modeling interactome: scale-free or geometric?}},
+  journal = {Bioinformatics},
+}
+@article{Przulj_2007,
+  doi = {10.1093/bioinformatics/btl301},
+  url = {http://dx.doi.org/10.1093/bioinformatics/btl301},
+  year = {2007},
+  month = {Jan},
+  publisher = {Oxford University Press (OUP)},
+  volume = {23},
+  number = {2},
+  pages = {e177-e183},
+  author = {N. Przulj},
+  title = {{Biological network comparison using graphlet degree distribution}},
+  journal = {Bioinformatics},
+}
+@article{Milenkovic_2010,
+  title={Optimal network alignment with graphlet degree vectors},
+  author={Milenkovi{\'c}, Tijana and Ng, Weng Leong and Hayes, Wayne and Pr{\v{z}}ulj, Nata{\v{s}}a},
+  journal={Cancer informatics},
+  volume={9},
+  pages={121},
+  year={2010},
+  publisher={Libertas Academica}
+}
+@article{Kuchaiev_2010,
+  author = {Kuchaiev, O. and Milenković, T. and Memišević, V. and Hayes, W. and Pržulj, N.},
+  title = {{Topological network alignment uncovers biological function and phylogeny}},
+  journal = {Journal of the Royal Society Interface},
+  year = {2010},
+  volume = {7},
+  number = {50},
+  pages = {1341-1354},
+}
+@article{Memisevic_2012,
+  author = {Memišević, V. and Pržulj, N.},
+  title = {{C-GRAAL: Common-neighbors-based global GRAph ALignment of biological networks}},
+  journal = {Integrative Biology (United Kingdom)},
+  year = {2012},
+  volume = {4},
+  number = {7},
+  pages = {734-743},
+}
+@article{Hovcevar_2014,
+  title={A combinatorial approach to graphlet counting},
+  author={Ho{\v{c}}evar, Toma{\v{z}} and Dem{\v{s}}ar, Janez},
+  journal={Bioinformatics},
+  volume={30},
+  number={4},
+  pages={559--565},
+  year={2014},
+  publisher={Oxford Univ Press}
+}
+@article{Rahman_2014,
+  title={GRAFT: An efficient graphlet counting method for large graph analysis},
+  author={Rahman, Mahmudur and Bhuiyan, Mansurul and Hasan, M},
+  year={2014},
+  publisher={IEEE}
+}
+@article{Milenkovic_2008,
+  title={GraphCrunch: a tool for large network analyses},
+  author={Milenkovi{\'c}, Tijana and Lai, Jason and Pr{\v{z}}ulj, Nata{\v{s}}a},
+  journal={BMC bioinformatics},
+  volume={9},
+  number={1},
+  pages={70},
+  year={2008},
+  publisher={BioMed Central Ltd}
+}
+@article{Kelly_1957,
+  title={A congruence theorem for trees},
+  author={Kelly, Paul J and others},
+  journal={Pacific J. Math},
+  volume={7},
+  number={0957},
+  pages={961--968},
+  year={1957}
+}
