--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,5 +1,38 @@
-\chapter{گرافلت کرنل گاوسی}
-در این فصل می‌خواهیم گرافلت کرنل گاوسی را معرفی کنیم. این کرنل بر مبنای شمارش تعداد گرافلت‌ها برای هر گراف
-\section{شمارش گرافلت‌ها}
+\chapter{گرافلت کرنل گاوسی}\label{chap:gaussian-graphlet-kernel}
+گرافلت‌ها انتخاب خوبی برای مقایسه دو گراف هستند. دلیل این انتخاب اولاً \خمیده{\فرضیه بازسازی گراف}\پانوشت{\متن‌لاتین{graph reconstruction conjecture}}\جستار{Kelly_1957} است که بیان می‌کند هر گراف بطور یکتا توسط زیرگراف‌هایش مشخص می‌شود. ثانیاً به دلیل استفاده از تعداد زیرگراف‌های با اندازه ثابت، دچار مشکل رفت و برگشت و هالتینگ نمی‌شود.
+در این فصل ابتدا نحوه شمارش گرافلت‌ها را شرح داده و سپس گرافلت کرنل گاوسی را معرفی می‌کنیم و به سنجش قدرت آن در جداسازی مدل‌های تصادفی گراف از یکدیگر، می‌پردازیم.
+
+\section{گرافلت‌ها و شمارش آن‌ها}
+گرافلت‌ها، زیرگراف‌های کوچک القایی بین سه تا پنج رأس از یک گراف بزرگتر هستند\جستار{Przulj_2004} که با نماد $G1,\ldots,G29$ در شکل \ارجا{fig:graphlets} نمایش داده شده‌اند (معمولاً زیرگراف تک یالی $G0$ هم به این مجموعه اضافه می‌شود).  رئوس هر گرافلت به گروه‌های خودریختی\پانوشت{\متن‌لاتین{automorphism}} تقسیم می‌شوند که به آن‌ها اوربیت\پانوشت{\متن‌لاتین{orbit}} گفته می‌شود. دو رأس از یک گرافلت به یک گروه اوربیتی تعلق دارند اگر توسط یک تابع خودریختی به یکدیگر نگاشت شوند. در شکل \ارجا{fig:graphlets} اوربیت‌ها با اعداد صفر تا 72 روی هر گرافلت مشخص شده‌اند و رنگ رئوس نشان‌دهنده تعلق آن‌ها به یک گروه اوربیتی است. از گرافلت‌ها و اوربیت‌ها در اندازه‌گیری شباهت ساختاری شبکه‌های تعاملات پروتئینی\پانوشت{\متن‌لاتین{Protein Interaction Networks}}\جستار{Przulj_2007}، انتخاب مدل تصادفی برای آن‌ها\جستار{Przulj_2004} و همچنین برای تراز کردن\پانوشت{\متن‌لاتین{alignment}} این شبکه‌ها\جستار{Milenkovic_2010}\جستار{Kuchaiev_2010}\جستار{Memisevic_2012} استفاده شده‌است.
+
+شمارش گرافلت‌های یک گراف (و طبیعتاً اوربیت‌ها) از لحاظ محاسباتی بسیار زمانبر است. به همین دلیل معمولاً از روش‌های نمونه‌برداری برای تخمین تعداد آن‌ها استفاده می‌شود\جستار{Rahman_2014}\جستار{Milenkovic_2008}. به تازگی الگوریتم ترکیبیاتی شمارش اوربیت‌ها\جستار{Hovcevar_2014} ارائه شده‌است که تعداد آن‌ها را به طور دقیق و در زمان بسیار کم محاسبه می‌نماید. با کمی تغییر در این الگوریتم، می‌توان بجای اوربیت‌ها، تعداد گرافلت‌ها را بدست آورد. ذکر این نکته ضروری است که برخلاف تصور، استفاده از اوربیت‌ها برای تعریف کرنل (بجای گرافلت‌ها) موجب افزایش نویز و در نتیجه، کاهش دقت می‌گردد. در بخش \ارجا{sec:graphlet-vs-orbit} به بررسی این مسئله می‌پردازیم.
+
+\subsection{الگوریتم ترکیبیاتی شمارش گرافلت‌ها}
+فرض کنید $x$ هر رأس از گراف $G$ باشد. مسئله، محاسبه تعداد دفعاتی است که $x$ در اوربیت $O_i$ از گرافلت‌های القایی گراف $G$ قرار گرفته است. این عدد را با $o_i$ نمایش می‌دهیم. الگوریتم بر اساس دستگاهی از معادل خطی کار می‌کند که تعداد اوربیت‌های مختلف، $o_i$ ها، را به هم مربوط می‌کند. از آنجایی که رتبه این دستگاه یکی کمتر از تعداد اوربیت‌ها خواهد بود، می‌توان با شمارش تنها یکی از اوربیت‌های گراف، تعداد مابقی آن‌ها را بدست آورد. در ادامه ابتدا نحوه ساختن این دستگاه را شرح داده و سپس روش تبدیل تعداد اوربیت‌ها به تعداد گرافلت‌ها را توضیح خواهیم داد.  
+
+\subsubsection{شمارش اوربیت‌های چهار رأسی}
+ همچنین، از آنجایی که باید یکی از اوربیت‌ها را در گراف $G$ شمارش کرد، اوربیت $O_14$ را برای این منظور انتخاب می‌کنیم. همچنین، برای شمارش یکی از اوربیت‌ها، اوربیت $O_14$ را انتخاب می‌کنیم و روش بهینه شمارش آن در گراف را ارائه می‌دهیم.
+
+\subsubsection{شمارش اوربیت‌های پنج رأسی}
+
+\subsection{تبدیل تعداد اوربیت‌ها به تعداد گرافلت‌ها}
+
+\subsection{مقایسه سرعت اجرا}
+
 \section{گرافلت کرنل گاوسی}
-\section{عملکرد کرنل گاوسی}
+گرافلت‌کرنل 
+برای دو گراف $G$ و $G^\prime$، گرافلت کرنل گاوسی $k$ را به صورت
+\begin{equation}
+\label{eqn:kernelfunction}
+k(G,G') = exp(-\gamma\parallel f_G - f_{G'}\parallel^2)
+\end{equation}
+تعریف می‌کنیم که در آن $f_G$ بردار نرمال شده‌ی تعداد گرافلت‌های $G$ است:
+\begin{equation}
+\label{eqn:featurevector}
+f_G = (-\log(\dfrac{n_0}{\sum _{j=0}^{29} n_j}),...,-\log(\dfrac{n_{29}}{\sum _{j=0}^{29} n_j}))
+\end{equation}
+در اینجا، $n_i$ تعداد گرافلت $G_i$ در گراف $G$ است.
+
+\section{عملکرد گرافلت کرنل گاوسی}
+\section{گرافلت کرنل گاوسی روی رئوس}
+\section{عملکرد گرافلت کرنل گاوسی روی رئوس}
