--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,8 +1,15 @@
 \chapter{پیش‌بینی عملکرد پروتئین‌ها با استفاده از گرافلت کرنل گاوسی}
-پروتئین‌ها بخش مهمی از فعالیت‌های زیستی را تشکیل می‌دهند. درک نحوه کار آن‌ها وابسته به یافتن عملکرد و وظیفه هر کدام در سامانه‌های زیستی است. روش‌های آزمایشگاهی برای تشخیص عملکرد پروتئین پر هزینه هستند بنابراین سعی می‌شود ابتدا با روش‌های محاسباتی، برای هر پروتئین عملکردی پیش‌بینی گردد و سپس در آزمایشگاه درستی این پیش‌بینی آزمون شود. روش‌های محاسباتی پیش‌بینی عملکرد بر اساس تخصیص عملکرد به پروتئین ناشناخته بر مبنای عملکردهای شناخته شده برای پروتئین‌های مشابه، عمل می‌کنند. در این فصل، پروتئین‌ها را به صورت گراف مدل کرده و سپس از گرافلت کرنل گاوسی به همراه SVM برای ساختن ماشین تشخیص عملکرد استفاده می‌کنیم.
+پروتئین‌ها بخش مهمی از فعالیت‌های زیستی را تشکیل می‌دهند. درک نحوه کار آن‌ها وابسته به یافتن عملکرد و وظیفه هر کدام در سامانه‌های زیستی است. روش‌های آزمایشگاهی برای تشخیص عملکرد پروتئین پر هزینه هستند بنابراین سعی می‌شود ابتدا با روش‌های محاسباتی، برای هر پروتئین عملکردی پیش‌بینی گردد و سپس در آزمایشگاه درستی این پیش‌بینی آزمون شود. روش‌های محاسباتی پیش‌بینی عملکرد بر اساس تخصیص عملکرد به پروتئین ناشناخته بر مبنای عملکردهای شناخته شده برای پروتئین‌های مشابه، عمل می‌کنند. معیارهای مختلفی برای اندازه‌گیری شباهت بین دو پروتئین تعریف شده‌است که از مهمترین آن‌ها می‌توان به روش‌های هم‌ترازی توالی\پانوشت{\متن‌لاتین{sequence alignment}} (مثل \متن‌لاتین{PSI-BLAST}\جستار{Altschul_1997} و \متن‌لاتین{FASTA}\جستار{Pearson_1988}) و هم‌ترازی ساختار\پانوشت{\متن‌لاتین{structure alignment}} (مثل \متن‌لاتین{DALI}\جستار{Holm_1996} و \متن‌لاتین{CE}\جستار{Shindyalov_1998}) اشاره کرد. این روش‌ها بر این مبنا استوارند که پروتئین‌های مشابه از لحاظ ساختاری، به احتمال زیاد از یک جد مشترک\پانوشت{\متن‌لاتین{common ancestor}} تکامل یافته‌اند پس باید عملکرد مشابهی داشته باشند\جستار{Reeck_1987}. بر همین اساس باید گفت در سیر تکامل، ساختار سه‌بعدی مولکول‌ها کمتر دستخوش تغییر می‌شود\جستار{Illergaard_2009}. پس استفاده از ساختار سه‌بعدی مولکول‌ها برای اندازه‌گیری شباهت، نتایج بهتری بدست خواهد داد. از آنجایی که انجام این‌کار در فضای سه‌بعدی پیچیده‌است، ابتدا ساختار سه‌بعدی را در قالبی مثل گراف مدل کرده و سپس به تحلیل آن می‌پردازند.
+
+در این فصل، پروتئین‌ها را به صورت گراف مدل کرده و سپس از گرافلت کرنل گاوسی به همراه SVM برای ساختن ماشین تشخیص عملکرد استفاده می‌کنیم.
 
 \section{ساختار پروتئین}\label{sec:protein-structure}
-پروتئین‌ها مواد آلی بزرگ و یکی از انواع درشت مولکول‌های زیستی هستند که از \خمیده{اسیدهای آمینه} ساخته شده‌اند. هر اسیدآمینه، از یک کربن نامتقارن به نام کربن $\alpha$ تشکیل یافته است که با چهار گروه مختلف کربوکسیل (\متن‌لاتین{COOH})، اتم هیدروژن، گروه آمینه (\متن‌لاتین{NH2}) و یک زنجیره جانبی ارتباط برقرار می‌کند (شکل \ارجا{fig:aminoacid}). تغییر در زنجیره جانبی، نوع متفاوتی از اسیدآمینه را بوجود می‌آورد. در طبیعت ۲۰ اسیدآمینه وجود دارد. با پیوند اسیدهای آمینه به صورت زنجیره‌‌ای بلند، یک \خمیده{پلی‌پپتید} بوجود می‌آید که در اصطلاح \خمیده{ساختار اول} پروتئین را تشکیل می‌دهد. به نظم‌های موضعی که پروتئین در حین تاشدگی\پانوشت{folding} به خود می‌گیرد، \خمیده{ساختار دوم} پروتئین می‌گویند. به شکل سه بعدی پروتئین بعد از تاشدگی، \خمیده{ساختار سوم} پروتئین گفته می‌شود. بعضی پروتئین‌ها از بیش از یک زنجیره پلی‌پتیدی بوجود می‌آیند. به نحوه قرار گرفتن این زنجیره‌ها در فضای سه‌بعدی، \خمیده{ساختار چهارم} پروتئین گفته می‌شود. شکل \ارجا{fig:protein} این مفاهیم را در قالب تصویر نشان می‌دهد.
+پروتئین‌ها مواد آلی بزرگ و یکی از انواع درشت مولکول‌های زیستی هستند که از \خمیده{اسیدهای آمینه} ساخته شده‌اند. هر اسیدآمینه، از یک کربن نامتقارن به نام کربن $\alpha$ تشکیل یافته است که با چهار گروه مختلف کربوکسیل (\متن‌لاتین{COOH})، اتم هیدروژن، گروه آمینه (\متن‌لاتین{NH2}) و یک زنجیره جانبی ارتباط برقرار می‌کند (شکل \ارجا{fig:aminoacid}). تغییر در زنجیره جانبی، نوع متفاوتی از اسیدآمینه را بوجود می‌آورد. در طبیعت ۲۰ اسیدآمینه وجود دارد. با پیوند اسیدهای آمینه به صورت زنجیره‌‌ای بلند، یک \خمیده{پلی‌پپتید} بوجود می‌آید که در اصطلاح \خمیده{ساختار اول} پروتئین را تشکیل می‌دهد. به نظم‌های موضعی که پروتئین در حین تاشدگی\پانوشت{folding} به خود می‌گیرد، \خمیده{ساختار دوم} پروتئین می‌گویند. به شکل سه بعدی پروتئین بعد از تاشدگی، \خمیده{ساختار سوم} پروتئین گفته می‌شود. بعضی پروتئین‌ها از بیش از یک زنجیره پلی‌پتیدی بوجود می‌آیند. به نحوه قرار گرفتن این زنجیره‌ها در فضای سه‌بعدی، \خمیده{ساختار چهارم} پروتئین گفته می‌شود. شکل \ارجا{fig:protein} این مفاهیم را در قالب تصویر نشان می‌دهد. تحلیل ساختار سه‌بعدی پروتئین و یافتن 
 
 \section{مدل گرافی پروتئین}
-برای مدل کردن پروتئین به صورت گراف، معمولاً اسید‌های آمینه را به عنوان رئوس گراف در نظر می‌گیرند. بین هر دو رأس یال خواهد بود اگر اسیدهای آمینه متناظر حداکثر به فاصله تعریف شده $d$ از یکدیگر قرار گرفته باشند. به این فاصله، فاصله اتصال\پانوشت{\متن‌لاتین{contact distance}} می‌گوییم. برای اندازه‌گیری این فاصله، باید موقعیت هر اسیدآمینه در فضای سه بعدی را تعیین کرد. اما همانطور که در بخش \ارجا{sec:protein-structure} به آن اشاره شد، هر اسیدآمینه از چند اتم ساخته شده است. اینکه موقعیت اسیدآمینه توسط کدام اتم تعیین شود و فاصله اتصال چقدر باشد، موضوعی چالش برانگیز در تحقیقات بوده است.
+برای مدل کردن پروتئین به صورت گراف، معمولاً اسید‌های آمینه را به عنوان رئوس گراف در نظر می‌گیرند. بین هر دو رأس یال خواهد بود اگر اسیدهای آمینه متناظر حداکثر به فاصله تعریف شده $d$ از یکدیگر قرار گرفته باشند. به این فاصله، فاصله اتصال\پانوشت{\متن‌لاتین{contact distance}} می‌گوییم. برای اندازه‌گیری این فاصله، باید موقعیت هر اسیدآمینه در فضای سه بعدی را تعیین کرد. اما همانطور که در بخش \ارجا{sec:protein-structure} به آن اشاره شد، هر اسیدآمینه از چند اتم ساخته شده است. اینکه موقعیت اسیدآمینه توسط کدام اتم تعیین شود و فاصله اتصال چقدر باشد، موضوعی چالش برانگیز در تحقیقات بوده است. در بین مقالات مختلف، کربن $\alpha$ 
+($C_\alpha$)
+، کربن $\beta$ 
+($C_\beta$)
+، ستون\پانوشت{backbone} اسیدآمینه ($BB$)، زنجیره جانبی ($SC$)، تمام اتم‌ها ($ALL$) و ترکیبات مختلف آن‌ها (مثل $C_\alpha+C_\beta$)، برای تعیین موقعیت اسید‌های آمینه استفاده شده‌اند. همچنین فواصل اتصال مختلفی بین ۴ تا ۱۶ آنگسترم در بین مقالات دیده می‌شود.
+
